--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ multipart.maxRequestSize=50Mb
 
 spring.http.encoding.charset=utf8
 
-spring.datasource.url=jdbc:mysql://localhost:3306/xxserver?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/xxserver?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
